--- a/td-react/src/styles.css
+++ b/td-react/src/styles.css
@@ -1,4 +1,4 @@
-.card-container {
+/* .card-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,8 +49,6 @@
 
 
 
-/* NavMenu.css */
-
 .nav-container {
   position: fixed;
   top: 0;
@@ -74,7 +72,7 @@
   height: 45px;
   padding: 10px;
   cursor: pointer;
-  z-index: 1002; /* Plus haut que le menu */
+  z-index: 1002;
   box-shadow: 5px 5px 15px #d1d1d1,
               -5px -5px 15px #ffffff;
   transition: all 0.3s ease;
@@ -275,7 +273,7 @@ footer {
   width: 100%;
 }
 
-/* NotesComponent styles */
+
 .notes-container .MuiTableContainer-root {
   margin: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
@@ -295,7 +293,7 @@ footer {
   background-color: #e3f2fd;
 }
 
-/* StudentsComponent styles */
+
 .students-list {
   padding: 20px;
   max-width: 800px;
@@ -325,7 +323,7 @@ footer {
   transition: all 0.3s ease;
 }
 
-/* SubjectsComponent styles */
+
 .subjects-list {
   padding: 20px;
   max-width: 800px;
@@ -353,7 +351,7 @@ footer {
   transition: all 0.3s ease;
 }
 
-/* AboutComponent styles */
+
 .about-container {
   padding: 20px;
   max-width: 800px;
@@ -373,7 +371,7 @@ footer {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Responsive styles */
+
 @media (max-width: 768px) {
   nav ul {
     flex-direction: column;
@@ -388,4 +386,6 @@ footer {
   .notes-container {
     overflow-x: auto;
   }
-}
+} */
+
+
